get vi copymode in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -54,3 +54,10 @@ bind -n ^s resize-pane -D
 bind -n ^w resize-pane -U
 bind -n ^a resize-pane -L
 bind -n ^d resize-pane -R
+
+# set vim mode for copy mode
+setw -g mode-keys vi
+
+# start selection with 'v' and copy to MacOS clipboard using 'y'
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
