--- a/tmux.conf
+++ b/tmux.conf
@@ -60,4 +60,4 @@ setw -g mode-keys vi
 
 # start selection with 'v' and copy to MacOS clipboard using 'y'
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi y send-keys -X copy-selection
