vi like tmux nav

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,11 +21,17 @@ bind-key - split-window -v
 bind-key s kill-pane
 bind-key ` kill-server
 
-bind -n ^s resize-pane -D
-bind -n ^w resize-pane -U
-bind -n ^a resize-pane -L
-bind -n ^d resize-pane -R
+# Vi-like pane resizing
+bind -n ^j resize-pane -D
+bind -n ^k resize-pane -U
+bind -n ^h resize-pane -L
+bind -n ^l resize-pane -R
 
+# Vi-like pane navigation
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # set vim mode for copy mode
 setw -g mode-keys vi
