--- a/tmux.conf
+++ b/tmux.conf
@@ -21,11 +21,11 @@ bind-key - split-window -v
 bind-key s kill-pane
 bind-key ` kill-server
 
-# Vi-like pane resizing
-bind -n ^j resize-pane -D
-bind -n ^k resize-pane -U
-bind -n ^h resize-pane -L
-bind -n ^l resize-pane -R
+# Pane resizing
+bind -n ^s resize-pane -D
+bind -n ^w resize-pane -U
+bind -n ^a resize-pane -L
+bind -n ^d resize-pane -R
 
 # Vi-like pane navigation
 bind h select-pane -L
