--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vim/pack/plugins/start/airline"]
 	path = vim/pack/plugins/start/airline
 	url = https://github.com/vim-airline/vim-airline.git
+[submodule "vim/pack/plugins/start/lean"]
+	path = vim/pack/plugins/start/lean
+	url = https://github.com/leanprover/lean.vim.git
