--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@ set -g default-shell /usr/local/bin/fish
 
 set-window-option -g mode-keys vi
 
-setw -g window-status-current-format '#[fg=yellow][#I-#F#W]#[default]'
+setw -g window-status-current-format '#[fg=red][#I-#F#W]#[default]'
 
 setw -g window-status-format '[#I#F#W]'
 
@@ -16,8 +16,8 @@ set -g prefix ^X
 
 bind a send-prefix
 
-bind-key \\ split-window -h
-bind-key - split-window -v
+bind-key \\ split-window -h -c "#{pane_current_path}"
+bind-key - split-window -v -c "#{pane_current_path}"
 bind-key s kill-pane
 bind-key ` kill-server
 
