--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,8 @@
 set -g default-command /usr/local/bin/fish
 set -g default-shell /usr/local/bin/fish
 
+set -g default-terminal "screen-256color"
+
 set-window-option -g mode-keys vi
 
 setw -g window-status-current-format '#[fg=red][#I-#F#W]#[default]'
