--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
-set -g default-command /usr/local/bin/fish
-set -g default-shell /usr/local/bin/fish
+set -g default-command /opt/homebrew/bin/fish
+set -g default-shell /opt/homebrew/bin/fish
 
 set -g default-terminal "screen-256color"
 
@@ -39,5 +39,5 @@ bind l select-pane -R
 setw -g mode-keys vi
 
 # start selection with 'v' and copy to MacOS clipboard using 'y'
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
