adding new tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,10 @@ setw -g window-status-current-format '#[fg=red][#I-#F#W]#[default]'
 
 setw -g window-status-format '[#I#F#W]'
 
+# Style active windows
+set -g pane-border-style 'fg=colour238'
+set -g pane-active-border-style 'fg=green,bold'
+set -g pane-border-status top
 
 set -g history-limit 5000000
 
